--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,23 @@
 <div class="row">
   <div class="col-xs-12">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div>
+    </div>
+    </nav>
   </div>
 </div>
 <div class="row">
@@ -13,6 +31,8 @@
   <div class="col-xs-4">
     <form method="POST" action="newTweet" class="form">
       <input type="text" class="form-control" name="tweet" size="140" maxlength="140">
+      <input type="hidden" class="lat" name="lat">
+      <input type="hidden" class="lng" name="lng">
       <input type="submit" class="btn btn-default">
     </form>
   </div>
