--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <nav class="navbar navbar-default">
+    <!-- <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -17,17 +17,24 @@
         </ul>
       </div>
     </div>
-    </nav>
+    </nav> -->
   </div>
 </div>
   <div class="col-xs-8">
     <form method="POST" action="newTweet" class="form">
-      <input type="text" class="form-control" name="tweet" size="140" maxlength="140">
+      <div class="input-group">
+        <input id="tweet-field" type="text" class="form-control" name="tweet" size="140" maxlength="140">
+        <span class="input-group-btn">
+          <button type="submit" class="btn btn-success">Tweet</button>
+        </span>
+      </div>
       <input type="hidden" class="lat" name="lat" value="47.6149715">
       <input type="hidden" class="lng" name="lng" value="-122.6154024">
-      <input type="submit" class="btn btn-default">
     </form>
-    <div id='map' class='map pad2'>Map</div>
+    <div class="wordcount text-right">
+      <div class="words">0</div><div> / 140</div>
+    </div>
+      <div id='map' class='map pad2'>Map</div>
   </div>
   <div class="col-xs-4">
     <a class="twitter-timeline" href="https://twitter.com/search?q=anerdymous404" data-widget-id="681978086871535616" data-chrome="nofooter" data-aria-polite="assertive">Tweets by anerdymous404</a>
