Logo creation, styling updates.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       </div>
     </div>
     </nav> -->
+    <img src="http://i.imgur.com/hbApy7c.png" class="logo img-responsive center-block">
   </div>
 </div>
   <div class="col-xs-8">
@@ -37,7 +38,7 @@
       <div id='map' class='map pad2'>Map</div>
   </div>
   <div class="col-xs-4">
-    <a class="twitter-timeline" href="https://twitter.com/search?q=anerdymous404" data-widget-id="681978086871535616" data-chrome="nofooter" data-aria-polite="assertive">Tweets by anerdymous404</a>
+    <a class="twitter-timeline" href="https://twitter.com/search?q=anerdymous404" data-widget-id="681978086871535616" data-chrome="nofooter" height="470" data-aria-polite="assertive">Tweets by anerdymous404</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
 </div>
