Minor styling updates.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,8 @@
           <button type="submit" class="btn btn-success">Tweet</button>
         </span>
       </div>
-      <input type="hidden" class="lat" name="lat" value="47.6149715">
-      <input type="hidden" class="lng" name="lng" value="-122.6154024">
+      <input type="hidden" class="lat" name="lat" value="47.6">
+      <input type="hidden" class="lng" name="lng" value="-122.6">
     </form>
     <div class="wordcount text-right">
       <div class="words">0</div><div> / 140</div>
